# 4IFA-GL-TP

./: .gitignore  CMakeLists.txt  Makefile  README.md  automaton.cpp  automaton.h  lexer.cpp  lexer.h  main.cpp  state.cpp  state.h  symbol.cpp  symbol.h  symbols.cpp  symbols.h  tests.txt
